feat(profile): add experiences api and improve controllers
