# storage/api-docs/api-docs.json
@@ -427,6 +427,24 @@
             }
         },
         "/api/v1/profile/experiences": {
+            "get": {
+                "tags": [
+                    "Alumni Experience"
+                ],
+                "summary": "Daftar Pengalaman",
+                "description": "Mengambil senarai (list) seluruh pengalaman yang telah ditambahkan oleh user. Berguna jika frontend hanya ingin me-refresh daftar pengalaman tanpa me-reload seluruh profil.",
+                "operationId": "db4a65dc7c56bc8258a75592a783f0e0",
+                "responses": {
+                    "200": {
+                        "description": "Daftar pengalaman berhasil dimuat."
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            },
             "post": {
                 "tags": [
                     "Alumni Experience"
@@ -692,11 +710,28 @@
                 "summary": "Daftar Master Konsentrasi Jurusan",
                 "description": "Menampilkan senarai referensi statis untuk atribut Jurusan di SMK (contoh: TKJ, RPL, TKR). Diperuntukkan sebagai pengisi opsi dropdown pada Frontend.",
                 "operationId": "5b9b999ab6ad43acf31c8e9f7740398d",
+                "parameters": [
+                    {
+                        "name": "school_id",
+                        "in": "query",
+                        "description": "ID Sekolah untuk memfilter jurusan (jika diakses oleh Guest). Akan diabaikan jika user mengirimkan Token karena sistem otomatis membaca ID dari token.",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "example": 4
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Sukses mengembalikan matriks daftar jurusan."
                     }
-                }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
             }
         },
         "/api/v1/master/tracer-options": {
